--- a/Exer06.css
+++ b/Exer06.css
@@ -15,21 +15,24 @@ body {
     background-color: antiquewhite;
 }
 
-.button{
+ul{
+    list-style-type: none;
+    display: block;
+    margin: 0;
+    padding: 0;
     display: block;
     width: 100%;
     height: 100%;
-    border: none;
-    outline:none;
-    cursor: pointer;
-    padding: 10px;
     font-family: sans-serif;
-    font-weight: 300;
-    font-size: 15px;
+    font-weight: 500;
+    font-size: 17px;
+}
+
+.tab{
     background-color: rgb(218, 194, 165);
 }
 
-.button:hover{
+.tab:hover{
     background-color: rgb(206, 176, 140);
 }
 
